Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-28471

QSslSocket::protocol() returns the wrong version

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.4.0
    • 4.8.4, 5.0.0 RC 1
    • Network: SSL
    • None
    • 233a2f37bfa6c896612cbf9a7db42e8e0da788f5

      QSslSocket::protocol() should return the protocol version used for the handshake. Instead, it returns the protocol version where the negotiated cipher has been specified (e.g. SSLv2, SSLv3, TLS 1.2).

      The correct version can be retrieved from OpenSSL using const char* SSL_get_version(const SSL ) (*not SSL_CIPHER_get_version(...)), and is one of "TLSv1.2", "TLSv1.1", "TLSv1", "SSLv3" or "SSLv2". This value can (only) be retrieved from openssl/ssl/ssl_lib.c

        For Gerrit Dashboard: QTBUG-28471
        # Subject Branch Project Status CR V

            richmoore Richard Moore (qtnetwork)
            bruns Stefan BrĂ¼ns
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes