src/network/ssl/qsslconfiguration.h
@@ -109,6 +109,7 @@ public:
     QSslCertificate peerCertificate() const;
     QList<QSslCertificate> peerCertificateChain() const;
     QSslCipher sessionCipher() const;
+    QSsl::SslProtocol sessionProtocol() const;
 
     // Private keys, for server sockets
     QSslKey privateKey() const;
